--- a/css/about.css
+++ b/css/about.css
@@ -286,7 +286,7 @@ body {
 }
 
 .carousel-content p {
-   color: var(--text);
+  color: var(--text);
   font-size: 1.8rem;
   max-width: 700px;
   margin: 0 auto 30px;
@@ -323,7 +323,6 @@ body {
   color: #000000;
   margin-left: 10px;
 }
-
 
 /* Carousel Controls */
 .carousel-controls {
@@ -678,8 +677,7 @@ body {
 /* CTA Section */
 .cta-section {
   padding: 100px 0;
-  background: 
-    url("../images/IMG-20251102-WA0020.jpg");
+  background: url("../images/IMG-20251102-WA0020.jpg");
   background-size: cover;
   background-position: center;
   color: var(--white);
@@ -735,13 +733,11 @@ body {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
 
-
 /* Footer with Logo */
 .site-footer {
   background: var(--secondary);
   color: var(--text);
   padding: 30px 0 10px;
-  
 }
 
 .footer-content {
@@ -776,7 +772,6 @@ body {
 .footer-col i {
   color: var(--white);
 }
-
 
 .footer-links {
   list-style: none;
@@ -919,6 +914,25 @@ body {
 
   .main-nav li {
     margin: 10px 0;
+  }
+
+  .btn-outline {
+    background: transparent;
+    border: 2px solid var(--white);
+    color: var(--secondary);
+    padding: 10px 25px;
+    border-radius: 30px;
+    font-weight: 700;
+    transition: all 0.3s;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  .btn-outline:hover {
+    background: var(--text);
+    color: white;
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(42, 178, 123, 0.2);
   }
 
   .hero-carousel {
