--- a/css/orthorpedic.css
+++ b/css/orthorpedic.css
@@ -707,8 +707,7 @@ body {
 /* Orthopedics CTA Section - Fully Responsive */
 .cta-section {
   padding: 80px 0;
-  background: 
-    url("/images/IMG-20251102-WA0021_edit_10053728273986.jpg");
+  background: url("/images/IMG-20251102-WA0021_edit_10053728273986.jpg");
   background-size: cover;
   background-position: center;
   text-align: center;
@@ -732,8 +731,6 @@ body {
   color: var(--white);
   text-shadow: 3px 3px 3px rgb(0, 0, 0);
 }
-
-
 
 /* Scroll to Top Button */
 .scroll-to-top {
@@ -934,12 +931,31 @@ body {
     margin: 10px 0;
   }
 
+  .btn-outline {
+    background: transparent;
+    border: 2px solid var(--white);
+    color: var(--secondary);
+    padding: 10px 25px;
+    border-radius: 30px;
+    font-weight: 700;
+    transition: all 0.3s;
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  .btn-outline:hover {
+    background: var(--text);
+    color: white;
+    transform: translateY(-2px);
+    box-shadow: 0 5px 15px rgba(42, 178, 123, 0.2);
+  }
+
   .topbar-inner {
     flex-direction: column;
     gap: 8px;
     text-align: center;
   }
-  .header-inner{
+  .header-inner {
     height: 100px;
   }
 
@@ -947,7 +963,6 @@ body {
     flex-wrap: wrap;
     justify-content: center;
   }
-
 
   .orthopedics-hero h1 {
     font-size: 2rem;
