--- a/css/index.css
+++ b/css/index.css
@@ -246,11 +246,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background: linear-gradient(
-    135deg,
-    rgba(7, 177, 208, 0.85) 0%,
-    rgba(7, 177, 208, 0.7) 100%
-  ); */
   z-index: 1;
 }
 
@@ -292,7 +287,7 @@ body {
   font-size: clamp(2rem, 5vw, 3.5rem);
   margin-bottom: 20px;
   line-height: 1.2;
-  text-shadow: 2px 2px 4px rgb(0, 0, 0);
+  text-shadow: 2px 2px 4px rgb(255, 255, 255);
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
@@ -302,7 +297,6 @@ body {
   color: var(--text);
   max-width: 600px;
   margin-bottom: 30px;
-  text-shadow: 10px 10px 20px rgb(255, 255, 255);
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
@@ -1129,6 +1123,10 @@ body {
     font-size: 3rem;
   }
 
+   .slide-content p {
+    font-size: 1.9rem;
+  }
+
   .about-container {
     grid-template-columns: 1fr;
     gap: 40px;
@@ -1219,6 +1217,7 @@ body {
   .hero-video {
     height: 100vh;
     min-height: 600px;
+    background-color: #0206fd;
   }
 
   .slide-content {
@@ -1230,7 +1229,7 @@ body {
   }
 
   .slide-content p {
-    font-size: 1.3rem;
+    font-size: 1.9rem;
   }
 
   .hero-buttons {
