--- a/css/about.css
+++ b/css/about.css
@@ -286,7 +286,7 @@ body {
 }
 
 .carousel-content p {
-  color: var(--text);
+  color: var(--light);
   font-size: 1.8rem;
   max-width: 700px;
   margin: 0 auto 30px;
