--- a/css/about.css
+++ b/css/about.css
@@ -281,16 +281,16 @@ body {
   font-size: 3rem;
   margin-bottom: 20px;
   line-height: 1.2;
-  text-shadow: 2px 2px 4px rgb(18, 42, 252);
+  text-shadow: 2px 2px 4px rgb(5, 30, 252, 0.89);
   animation: fadeInUp 1s ease-out;
 }
 
 .carousel-content p {
-  color: var(--secondary);
+  color: var(--text);
   font-size: 1.8rem;
   max-width: 700px;
   margin: 0 auto 30px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  text-shadow: 2px 2px 4px rgba(5, 30, 252, 0.89);
   animation: fadeInUp 1s ease-out 0.3s both;
 }
 
