--- a/css/mental-blog.css
+++ b/css/mental-blog.css
@@ -217,7 +217,7 @@ body {
 
 /* Blog Hero Section */
 .blog-hero {
-  background: url("/images/How to Keep Yourself Mentally Sharp Under Stressful Conditions _ ShineSheets - Elevate Your Life.jpg");
+  background: url("images/How to Keep Yourself Mentally Sharp Under Stressful Conditions _ ShineSheets - Elevate Your Life.jpg");
 
   padding: 100px 0 60px;
   text-align: center;
