--- a/css/neurology.css
+++ b/css/neurology.css
@@ -250,7 +250,7 @@ body {
 
 /* Hero Section */
 .neurology-hero {
-  background: url("images/brain.jpeg");
+  background: url("https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550332/Human_heart_on_dark_background_with_bokeh_3d_illustration___Premium_AI-generated_image_vpcyo4.jpg");
   background-size: cover;
   background-position: center;
   color: var(--white);
