--- a/css/pediatric.css
+++ b/css/pediatric.css
@@ -241,18 +241,19 @@ body {
 }
 
 .pediatrics-hero h1 {
-  color: var(--secondary);
-  text-shadow: 2px 2px 4px rgb(255, 255, 255);
-  font-size: 3.5rem;
+  color: var(--text);
+  font-size: 3rem;
   margin-bottom: 20px;
+  line-height: 1.2;
+  text-shadow: 2px 2px 4px rgb(5, 30, 252, 0.89);
 }
 
 .pediatrics-hero p {
-  font-size: 1.5rem;
+  color: var(--text);
+  font-size: 1.8rem;
   max-width: 700px;
   margin: 0 auto 30px;
-  opacity: 0.9;
-  text-shadow: 2px 2px 4px rgb(255, 255, 255);
+  text-shadow: 2px 2px 4px rgba(5, 30, 252, 0.89);
 }
 
 .hero-buttons {
