--- a/css/cardiology.css
+++ b/css/cardiology.css
@@ -667,10 +667,9 @@ body {
 /* Cardiology CTA Section */
 .cta-section {
   padding: 80px 0;
-  background: url("https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762553490/AI_generated_Real_human_heart_isolated_on_white_background_lpscpz.jpg");
+  background: url("https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550332/heart_ncganj.jpg");
   background-size: cover;
   background-position: center;
-  color: var(--text);
   text-align: center;
   position: relative;
   background-attachment: fixed;
@@ -692,17 +691,21 @@ body {
 }
 
 .cta-section h2 {
-  font-size: 2.2rem;
+   color: var(--text);
+  font-size: 3rem;
   margin-bottom: 20px;
+  line-height: 1.2;
+  text-shadow: 2px 2px 4px rgb(5, 30, 252, 0.89);
+  animation: fadeInUp 1s ease-out;
 }
 
 .cta-section p {
-  font-size: 1.1rem;
-  margin-bottom: 40px;
+  color: var(--text);
+  font-size: 1.8rem;
   max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
-  line-height: 1.6;
+  margin: 0 auto 30px;
+  text-shadow: 2px 2px 4px rgba(5, 30, 252, 0.89);
+  animation: fadeInUp 1s ease-out 0.3s both;
 }
 
 /* Footer with Logo */
