--- a/css/index.css
+++ b/css/index.css
@@ -258,6 +258,17 @@ body {
   align-items: center;
 }
 
+.slide::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+
 .slide {
   position: absolute;
   top: 0;
@@ -275,7 +286,7 @@ body {
 }
 
 .slide-content {
-  color: var(--text);
+  color: var(--white);
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
@@ -284,22 +295,23 @@ body {
 }
 
 .slide-content h1 {
-  font-size: clamp(2rem, 5vw, 3.5rem);
+  font-size: clamp(1.8rem, 5vw, 3rem);
   margin-bottom: 20px;
   line-height: 1.2;
-  text-shadow: 2px 2px 4px rgb(5, 30, 252, 0.89);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  animation: fadeInUp 1s ease-out;
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
 
 .slide-content p {
   font-size: clamp(1.5rem, 2.5vw, 1.3rem);
-  color: var(--text);
+  color: var(--white);
   max-width: 600px;
   margin-bottom: 30px;
   word-wrap: break-word;
   overflow-wrap: break-word;
-  text-shadow: 2px 2px 4px rgb(5, 30, 252, 0.89);
+  
 }
 
 .hero-buttons {
@@ -310,12 +322,13 @@ body {
 }
 
 .btn-primary {
-  background: var(--white);
+  background: var(--text);
   color: var(--primary);
   padding: 12px 30px;
   border-radius: 30px;
   font-weight: 700;
   text-decoration: none;
+  cursor: pointer;
   display: inline-block;
   transition: var(--transition);
   white-space: nowrap;
@@ -323,7 +336,7 @@ body {
 }
 
 .btn-primary:hover {
-  background: var(--light);
+  background: var(--text);
   transform: translateY(-3px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
 }
