--- a/css/contact.css
+++ b/css/contact.css
@@ -253,27 +253,46 @@ body {
 .contact-hero {
   background: url("/images/IMG-20251102-WA0021_edit_10053728273986.jpg");
   background-position: center;
-  color: var(--white);
   padding: clamp(60px, 10vw, 100px) 0;
   text-align: center;
   background-attachment: fixed;
 }
 
+.contact-hero::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1;
+}
+
+.container {
+  position: relative;
+  z-index: 2;
+  color: white;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  text-align: center;
+}
+
 .contact-hero h1 {
-  color: var(--text);
-  font-size: 3rem;
+ font-size: clamp(1.8rem, 5vw, 3rem);
   margin-bottom: 20px;
   line-height: 1.2;
-  text-shadow: 2px 2px 4px rgb(5, 30, 252, 0.89);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   animation: fadeInUp 1s ease-out;
 }
 
 .contact-hero p {
-   color: var(--text);
-  font-size: 1.8rem;
+   font-size: clamp(1rem, 2.5vw, 1.5rem);
   max-width: 700px;
   margin: 0 auto 30px;
-  text-shadow: 2px 2px 4px rgb(251, 252, 255);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
   animation: fadeInUp 1s ease-out 0.3s both;
 }
 
@@ -462,6 +481,19 @@ textarea.form-control {
   background: url("/images/heart.jpeg") center/cover no-repeat;
   background-attachment: fixed;
 }
+
+.map-container::before {
+  content: "";
+  position: absolute;
+  background-size: cover;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background: rgba(0, 0, 0, 0.4); */
+  z-index: 1;
+}
+
 .section-header p {
   color: var(--text);
   font-size: 25px;
@@ -473,6 +505,7 @@ textarea.form-control {
 
 .map-container {
   height: 300px;
+  color: white;
   border-radius: 15px;
   overflow: hidden;
   box-shadow: var(--shadow);
@@ -480,7 +513,7 @@ textarea.form-control {
 
 .map-placeholder {
   height: 100%;
-  background: linear-gradient(135deg, var(--primary) 0%, var(--secondary) 100%);
+  background: linear-gradient(135deg, var(--secondary) 0%, var(--secondary) 100%);
   display: flex;
   align-items: center;
   justify-content: center;
