--- a/css/index.css
+++ b/css/index.css
@@ -249,14 +249,6 @@ body {
   z-index: 1;
 }
 
-.slides-container {
-  position: relative;
-  z-index: 2;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
 
 .slide::before {
   content: "";
@@ -265,9 +257,19 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
+
+.slides-container {
+  position: relative;
+  z-index: 2;
+   color: white;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
 
 .slide {
   position: absolute;
@@ -363,7 +365,7 @@ body {
 
 .hero-features {
   display: flex;
-  color: var(--text);
+  color: var(--white);
   gap: 30px;
   margin-bottom: 30px;
   flex-wrap: wrap;
@@ -376,7 +378,7 @@ body {
 }
 
 .hero-feature i {
-  background: rgba(3, 48, 252, 0.884);
+  background: var(--text);
   width: 40px;
   height: 40px;
   border-radius: 50%;
