--- a/css/contact.css
+++ b/css/contact.css
@@ -251,8 +251,9 @@ body {
 
 /* Hero Section */
 .contact-hero {
-  background: url("../images/IMG-20251102-WA0021_edit_10053728273986.jpg");
-  background-position: center;
+  background: url("https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550332/Human_heart_on_dark_background_with_bokeh_3d_illustration___Premium_AI-generated_image_vpcyo4.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
   padding: clamp(60px, 10vw, 100px) 0;
   text-align: center;
   background-attachment: fixed;
@@ -478,7 +479,7 @@ textarea.form-control {
 /* Map Section */
 .map-section {
   padding: 0 0 clamp(60px, 10vw, 100px);
-  background: url("../images/heart.jpeg") center/cover no-repeat;
+  background: url("https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550332/heart_ncganj.jpg") center/cover no-repeat;
   background-attachment: fixed;
 }
 
