--- a/css/book-appoint.css
+++ b/css/book-appoint.css
@@ -220,7 +220,7 @@ body {
 
 /* Hero Section */
 .appointment-hero {
-  background: url("https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550331/Afro_Medical_Professionals_United-_Worker_s_Day_ecggwm.jpg");
+  background: url("https://res.cloudinary.com/dl4hjr1p2/image/upload/v1762550333/Doctors_nlnynf.png");
   background-size: cover;
   background-position: center;
   /* color: var(--white); */
