--- a/css/neurology.css
+++ b/css/neurology.css
@@ -232,12 +232,12 @@ body {
   font-size: clamp(0.9rem, 1.5vw, 1rem);
 }
 
-.btn-outline:hover {
+/* .btn-outline:hover {
   background: var(--text);
   color: white;
   transform: translateY(-2px);
   box-shadow: 0 5px 15px rgba(42, 178, 123, 0.2);
-}
+} */
 
 .nav-toggle {
   display: none;
